Name              : sbvPlugin
Version           : 9.2.2
Category          : Formal methods, Theorem provers, Math, SMT, Symbolic Computation
Synopsis          : Formally prove properties of Haskell programs using SBV/SMT
Description       : GHC plugin for proving properties over Haskell functions using SMT solvers, based
                    on the <http://hackage.haskell.org/package/sbv SBV> package.
                    .
                    See "Data.SBV.Plugin" for a quick example, or the modules under 'Data.SBV.Plugin.Examples'
                    for more details.
License           : BSD3
License-file      : LICENSE
Stability         : Experimental
Author            : Levent Erkok
Homepage          : http://github.com/LeventErkok/sbvPlugin
Bug-reports       : http://github.com/LeventErkok/sbvPlugin/issues
Maintainer        : Levent Erkok (erkokl@gmail.com)
Build-Type        : Simple
Cabal-Version     : 1.14
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md

Tested-With       : GHC==9.2.2

source-repository head
    type:       git
    location:   git://github.com/LeventErkok/sbvPlugin.git

Library
  default-language: Haskell2010
  ghc-options     : -Wall -fplugin-opt Data.SBV.Plugin:skip
  Exposed-modules : Data.SBV.Plugin
                  , Data.SBV.Plugin.Data
                  , Data.SBV.Plugin.Examples.BitTricks
                  , Data.SBV.Plugin.Examples.Maximum
                  , Data.SBV.Plugin.Examples.MergeSort
                  , Data.SBV.Plugin.Examples.MicroController
  build-depends   : base >= 4.11 && < 5
                  , ghc      >= 9.2.2
                  , ghc-prim
                  , containers
                  , sbv >= 9.0
                  , mtl
                  , template-haskell
  Other-modules   : Data.SBV.Plugin.Analyze
                  , Data.SBV.Plugin.Common
                  , Data.SBV.Plugin.Env
                  , Data.SBV.Plugin.Plugin
                  , Data.SBV.Plugin.Examples.Proved

Test-Suite sbvPluginTests
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -Wall
  Build-depends   : base >= 4.11 && < 5
                  , sbvPlugin
                  , tasty
                  , tasty-golden
                  , filepath
                  , process
                  , directory
  Hs-Source-Dirs  : tests
  main-is         : Run.hs
